--- a/SPIA-SistemaParaInventarioADempiere/SPIA-SistemaParaInventarioADempiere/SPIA-SistemaParaInventarioADempiere.vbproj
+++ b/SPIA-SistemaParaInventarioADempiere/SPIA-SistemaParaInventarioADempiere/SPIA-SistemaParaInventarioADempiere.vbproj
@@ -75,6 +75,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Reglas\ValidarEquiposZonas.vb" />
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
